changing test structure and configuring jacoco dependency's