@@ -75,12 +75,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                 <argLine>
+                    @{jaCoCoArgLine} --add-opens infectiontracer.rest/infectiontracer.rest=ALL-UNNAMED
+                    </argLine>
+                    </configuration>
             </plugin>
 
             <!-- Jacoco test -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <configuration>
+                    <propertyName>jaCoCoArgLine</propertyName>
+                </configuration>
             </plugin>
 
             <!-- Run the checkstyle code quality tool -->
@@ -101,7 +109,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.4.4</version>
             </plugin>
-
         </plugins>
     </build>
 </project>
